--- a/app/src/main/res/layout/activity_award_detail.xml
+++ b/app/src/main/res/layout/activity_award_detail.xml
@@ -89,7 +89,7 @@
                                 android:layout_height="wrap_content"/>
                             <TextView
                                 android:layout_alignParentRight="true"
-                                android:id="@+id/tv_date_start"
+                                android:id="@+id/tv_award_date"
                                 android:letterSpacing="-0.01"
                                 android:textColor="#000"
                                 android:textStyle="normal"
@@ -137,7 +137,7 @@
                 </RelativeLayout>
 
                 <ImageView
-                    android:id="@+id/btn_schedule_save"
+                    android:id="@+id/btn_award_save"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="30dp"
                     android:layout_marginTop="16dp"
