--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -114,7 +114,7 @@
                             android:inputType="textEmailAddress"
                             android:singleLine="true"
                             android:id="@+id/et_email"
-                            android:hint="이메일"
+                            android:hint="닉네임"
                             android:letterSpacing="-0.02"
                             android:textColor="#000"
                             android:textStyle="normal"
