--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
 <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="#f2f3f5"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,9 +19,11 @@
                 android:layout_height="match_parent"
                 android:clipChildren="false">
 
-            <RelativeLayout
+            <LinearLayout
+                    android:layout_centerHorizontal="true"
+                    android:orientation="horizontal"
                     android:id="@+id/button_container"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="20dp"
@@ -32,27 +35,35 @@
                         android:id="@+id/btn_x"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/btn_number"
-                        android:layout_marginRight="18dp"
                         android:src="@drawable/bt_x"/>
-                <ImageView
-                        android:layout_centerVertical="true"
-                        android:id="@+id/btn_number"
-                        android:layout_centerInParent="true"
+                <RelativeLayout
+                        android:layout_marginHorizontal="18dp"
+                        android:layout_gravity="center_vertical"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_count"/>
+                        android:layout_height="wrap_content">
+                    <ImageView
+                            android:id="@+id/btn_number"
+                            android:layout_centerInParent="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_count"/>
+                    <ImageView
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_num_10"
+                            android:id="@+id/iv_num"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                </RelativeLayout>
+
                 <ImageView
-                        android:layout_centerVertical="true"
                         android:id="@+id/btn_o"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/bt_o"
-                        android:layout_marginLeft="18dp"
                         android:layout_toEndOf="@id/btn_number"/>
 
 
-            </RelativeLayout>
+            </LinearLayout>
 
             <RelativeLayout
                     android:layout_width="match_parent"
@@ -65,7 +76,8 @@
 
                 <com.yuyakaido.android.cardstackview.CardStackView
                         android:id="@+id/card_stack_view"
-                        android:layout_width="340dp"
+                        android:layout_width="360dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_height="match_parent"
                         android:layout_centerInParent="true">
 
